frame/support/test/tests/construct_runtime_ui/undefined_event_part.stderr
error: `Pallet` does not have #[pallet::event] defined, perhaps you should remove `Event` from construct_runtime?
  --> tests/construct_runtime_ui/undefined_event_part.rs:5:1
   |
5  |   #[frame_support::pallet]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^
...
49 | / construct_runtime! {
50 | |     pub enum Runtime where
51 | |         Block = Block,
52 | |         NodeBlock = Block,
...  |
57 | |     }
58 | | }
   | |_- in this macro invocation
   |
   = note: this error originates in the macro `pallet::__substrate_event_check::is_event_part_defined` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0412]: cannot find type `Event` in module `pallet`
  --> tests/construct_runtime_ui/undefined_event_part.rs:49:1
   |
49 | / construct_runtime! {
50 | |     pub enum Runtime where
51 | |         Block = Block,
52 | |         NodeBlock = Block,
...  |
57 | |     }
58 | | }
   | |_^ not found in `pallet`
   |
   = note: this error originates in the macro `construct_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this enum
   |
1  | use frame_system::Event;
   |
help: if you import `Event`, refer to it directly
   |
49 - construct_runtime! {
50 -     pub enum Runtime where
51 -         Block = Block,
52 -         NodeBlock = Block,
53 -         UncheckedExtrinsic = UncheckedExtrinsic
54 -     {
55 -         System: frame_system::{Pallet, Call, Storage, Config, Event<T>},
56 -         Pallet: pallet::{Pallet, Event},
57 -     }
58 - }
   |
